# bookmark-organiser

./: .gitignore  PLAN.md  README.md  flake.nix  pyproject.toml
.github/workflows/: nix.yml  semgrep.yml  test.yml
bookmark-processor/: PLAN.md  blessed_tags.txt  bookmarks_input.json  main.py  models.py  pyproject.toml
bookmark-processor/tasks/: io.py  liveness.py  processing.py
bookmark-processor/tests/: test_bookmarks_input.json  test_integration.py
docs/: AGENTS.md  PLAN.md  TESTS.md
scripts/: live_count.sh
src/bookmark_processor/: __init__.py  main.py  models.py
src/bookmark_processor/tasks/: io.py  liveness.py  processing.py
tests/: conftest.py  test_integration.py
tests/integration/: conftest.py  test_cli_integration.py  test_liveness_integration.py  test_main_integration.py  test_processing_integration.py
tests/unit/: conftest.py  test_io_unit.py  test_liveness_unit.py  test_main_unit.py  test_models_unit.py  test_processing_unit.py
