[project]
name = "bookmark-processor"
version = "0.1.0"
description = "A parallelized pipeline to process bookmarks."
requires-python = ">=3.10"
dependencies = [
    # keep-sorted start
    "prefect>=2.0",
    "httpx",
    "playwright",
    "pydantic",
    "beautifulsoup4",
    "lxml",
    "llm",
    "llm-mlx",
    "typer",
    "pendulum",
    # keep-sorted end
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock",
]

[project.scripts]
bookmark-processor = "bookmark_processor.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
