[project]
name = "bookmark-processor"
version = "0.1.0"
description = "A parallelized pipeline to process bookmarks."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"

requires-python = ">=3.10"

dependencies = [
    # keep-sorted start
    "beautifulsoup4",
    "httpx",
    "llm",
    "llm-mlx",
    "lxml",
    "pendulum",
    "playwright",
    "prefect>=2.0",
    "pydantic",
    "typer",
    # keep-sorted end
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock",
]

[project.scripts]
bookmark-processor = "bookmark_processor.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
