[project]
name = "bookmark-processor"
version = "0.1.0"
description = "A parallelized pipeline to process bookmarks."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Cameron Yule" }]
license = "MIT"

requires-python = ">=3.10"

dependencies = [
    # keep-sorted start
    "beautifulsoup4~=4.13.4",
    "httpx~=0.28.1",
    "llm-ollama~=0.11",
    "llm~=0.26",
    "lxml~=6.0.0",
    "pendulum~=3.1.0",
    "playwright~=1.53.0",
    "prefect~=3.4.7",
    "pydantic~=2.11.7",
    "typer~=0.16.0",
    # keep-sorted end
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    "pytest~=8.4.1",
    "pytest-mock~=3.14.1",
]

[project.scripts]
bookmark-processor = "bookmark_processor.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
