[project]
name = "bookmark-processor"
version = "0.1.0"
description = "A parallelized pipeline to process bookmarks."
requires-python = ">=3.10"
dependencies = [
    "prefect>=2.0",
    "httpx",
    "playwright",
    "pydantic",
    "beautifulsoup4",
    "lxml",
    "llm",
    "typer[all]",
    "pendulum", # Added pendulum dependency
]

[project.optional-dependencies]
dev = [
    "pytest",
    "respx",
    "pytest-mock",
    "ruff",
]

[project.scripts]
bookmark-processor = "main:app"

[tool.setuptools]
py-modules = ["main", "models"]
packages = ["tasks"]

[tool.bookmark-processor]
# General application settings, such as the LLM model to use
llm_model = "gpt-3.5-turbo"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
